--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -121,11 +121,8 @@
     <div class="container">
       <div class="upload-card">
         <h2>Upload and Download Files</h2>
-        <img
-          src="{% static 'images/undraw.svg' %}"
-          class="download-icon"
-          alt="Icon"
-        />
+        <img src="/static/undraw.svg" class="download-icon" alt="Icon">
+
         <input type="file" class="my-pond" multiple name="filepond" />
         <div class="mt-4">
           <button class="btn btn-primary" onclick="upload_file()">
