--- a/home/templates/download.html
+++ b/home/templates/download.html
@@ -76,7 +76,8 @@
     <div id="particles-js"></div>
 
     <div class="container text-center">
-      <img src="{% static 'images/download.svg' %}" alt="Download Icon" />
+      <img src="/static/undraw.svg" class="download-icon" alt="Icon">
+
       <div class="card">
         <div class="card-body">
           <a
