--- a/home/templates/download.html
+++ b/home/templates/download.html
@@ -205,7 +205,8 @@
       });
 
       function redirectToDownload(uid) {
-        window.location.href = `/redirect/${uid}/`;
+        window.location.href = "/download/downloads.zip";
+
       }
     </script>
   </body>
