--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -121,7 +121,7 @@
     <div class="container">
       <div class="upload-card">
         <h2>Upload and Download Files</h2>
-        <img src="{% static 'home/undraw.svg' %}" class="download-icon" alt="Icon">
+        {% comment %} <img src="{% static 'home/undraw.svg' %}" class="download-icon" alt="Icon"> {% endcomment %}
 
 
         <input type="file" class="my-pond" multiple name="filepond" />
